<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <com.leon.biuvideo.ui.views.SimpleTopBar
        android:id="@+id/user_info_fragment_topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:topBarTitle="@string/biliUserInfo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardMargin"
        android:background="@drawable/round_corners6dp_bg"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp">

        <com.leon.biuvideo.ui.views.CardTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:card_title="@string/user_baseInfo" />

        <com.leon.biuvideo.ui.views.TagView
            android:id="@+id/user_info_fragment_tagView_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:leftValue="@string/user_uid"
            app:tagMark="none" />

        <com.leon.biuvideo.ui.views.TagView
            android:id="@+id/user_info_fragment_tagView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:isClick="false"
            app:leftValue="@string/user_name"
            app:tagMark="none" />

        <com.leon.biuvideo.ui.views.TagView
            android:id="@+id/user_info_fragment_tagView_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:isClick="false"
            app:leftValue="@string/user_sex"
            app:tagMark="none" />

        <com.leon.biuvideo.ui.views.TagView
            android:id="@+id/user_info_fragment_tagView_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:isClick="false"
            app:leftValue="@string/user_level"
            app:tagMark="none" />

        <com.leon.biuvideo.ui.views.TagView
            android:id="@+id/user_info_fragment_tagView_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:isClick="false"
            app:leftValue="@string/user_birthday"
            app:tagMark="none" />

        <com.leon.biuvideo.ui.views.TagView
            android:id="@+id/user_info_fragment_tagView_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:isClick="false"
            app:leftValue="@string/user_flag"
            app:tagMark="none" />

    </LinearLayout>

</LinearLayout>